k8s/apps/dev/fe/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world-http
spec:
  entryPoints:
    - web
  routes:
      ## Default fallback goes to FE
    - match: HostRegexp(`snwbr.net`, `{subdomain:[a-z]+}.snwbr.net`)
      kind: Rule
      priority: 1
      # services:
      # - name: hello-world
      #   port: 8080
      middlewares:
      - name: redirectscheme
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world-https
spec:
  entryPoints:
    - websecure
  routes:
      ## Default fallback goes to FE
    - match: PathPrefix(`/stats`)
      kind: Rule
      priority: 1
      services:
      - name: hello-world
        port: 8080
      middlewares:
      - name: redirectregex
      - name: basic-auth
        namespace: services
  # Use the secret generated by the Traefik's tlsstore
  tls: {}
#    secretName: hello-world-tls
---
# Redirect with domain replacement
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectregex
spec:
  redirectRegex:
    regex: ^https?://(.+)snwbr.net/?(.*)
    replacement: https://snwbr.net/${2}
    permanent: true
---
## Redirect HTTP requests to HTTPS
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
spec:
  redirectScheme:
    scheme: https
    permanent: true
